# mediakit

./: .gitignore  CMakeLists.txt  README.md  demo.sh  media.py
cmake/: env.cmake
include/libavutil/: ffversion.h
include/libhikvision/: HCNetSDK.h
src/: main.cpp  media.cpp  media.h  media.py  piex.cpp
